--- a/014_display-properties/main.css
+++ b/014_display-properties/main.css
@@ -2,10 +2,13 @@ div{
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    border-radius: 10px;
+    display: inline-block;
 }
 
 img {
     border: 10px groove orangered;
+    border-radius: 100%;
 }
 .dogone {
     border: 10px dashed orangered;
